<?xml version="1.0"?>
<package format="2">
  <name>simple_sim</name>
  <version>0.0.1</version>
  <description>The simple_sim package</description>

  <maintainer email="d.benders@tudelft.nl">Dennis Benders</maintainer>
  <author>Dennis Benders</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_ros</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
